--- a/config-ui/index.html
+++ b/config-ui/index.html
@@ -598,7 +598,7 @@
     </div>
 
     <script>
-        const WORKER_URL = '/api/config'; // 使用相对路径，由 Pages 重写规则处理
+        const WORKER_URL = 'https://config-center.52mn.ru/api/config'; // 使用相对路径，由 Pages 重写规则处理
         // 假设 Worker 存储的 KV 是 JSON 字符串，例如：
         // { "value": "actual_value", "comment": "some_comment" }
         // 或直接存储 "actual_value"
