--- a/index.html
+++ b/index.html
@@ -9,28 +9,22 @@
         /* --- 全局与字体 --- */
         :root {
             /* 主色调 - 现代紫蓝渐变 */
-            --primary-color: #667eea;
-            --primary-hover: #5a67d8;
-            --primary-light: rgba(102, 126, 234, 0.1);
-            --primary-gradient: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            --primary-gradient-hover: linear-gradient(135deg, #5a67d8 0%, #6b46c1 100%);
+            --primary-color: #2563eb;
+            --primary-hover: #1d4ed8;
+            --primary-light: rgba(37, 99, 235, 0.1);
 
             /* 功能色 */
             --success-color: #10b981;
             --success-light: rgba(16, 185, 129, 0.1);
-            --success-gradient: linear-gradient(135deg, #10b981 0%, #059669 100%);
 
             --danger-color: #ef4444;
             --danger-light: rgba(239, 68, 68, 0.1);
-            --danger-gradient: linear-gradient(135deg, #ef4444 0%, #dc2626 100%);
 
             --warning-color: #f59e0b;
             --warning-light: rgba(245, 158, 11, 0.1);
-            --warning-gradient: linear-gradient(135deg, #f59e0b 0%, #d97706 100%);
 
             --info-color: #06b6d4;
             --info-light: rgba(6, 182, 212, 0.1);
-            --info-gradient: linear-gradient(135deg, #06b6d4 0%, #0891b2 100%);
 
             /* 中性色 */
             --bg-primary: #ffffff;
@@ -73,48 +67,19 @@
             line-height: 1.6;
             min-height: 100vh;
             padding: 1rem;
-            background-attachment: fixed;
-            position: relative;
+            background-color: #f8fafc;
         }
 
-        body::before {
-            content: '';
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background:
-                radial-gradient(circle at 20% 50%, rgba(120, 119, 198, 0.3) 0%, transparent 50%),
-                radial-gradient(circle at 80% 20%, rgba(255, 255, 255, 0.1) 0%, transparent 50%),
-                radial-gradient(circle at 40% 80%, rgba(102, 126, 234, 0.15) 0%, transparent 50%);
-            pointer-events: none;
-            z-index: -1;
-        }
 
         .container {
             max-width: 1200px;
             margin: 0 auto;
             padding: 2.5rem;
-            background: var(--bg-glass);
-            border-radius: var(--radius-xl);
-            box-shadow: var(--shadow-glass);
-            backdrop-filter: var(--blur-md);
-            -webkit-backdrop-filter: var(--blur-md);
-            border: 1px solid var(--border-glass);
-            position: relative;
-            overflow: hidden;
+            background: #ffffff;
+            border-radius: 8px;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
         }
 
-        .container::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            height: 1px;
-            background: linear-gradient(90deg, transparent 0%, var(--border-glass) 50%, transparent 100%);
-        }
 
         /* --- 头部区域 --- */
         .header {
@@ -129,12 +94,8 @@
             font-size: 3rem;
             font-weight: 800;
             margin: 0;
-            background: var(--primary-gradient);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
+            color: var(--primary-color);
             letter-spacing: -0.02em;
-            text-shadow: 0 0 30px rgba(102, 126, 234, 0.5);
         }
 
         .header p {
@@ -151,19 +112,6 @@
             font-weight: 700;
             color: var(--text-primary);
             margin: 3rem 0 1.5rem 0;
-            display: flex;
-            align-items: center;
-            gap: 0.75rem;
-            position: relative;
-        }
-
-        h2::before {
-            content: '';
-            width: 5px;
-            height: 28px;
-            background: var(--primary-gradient);
-            border-radius: 3px;
-            box-shadow: 0 0 10px rgba(102, 126, 234, 0.3);
         }
 
         h3, h4 {
@@ -179,32 +127,12 @@
 
         /* --- 表单与输入框 --- */
         .form-section {
-            background: var(--bg-glass);
-            border: 1px solid var(--border-glass);
-            border-radius: var(--radius-lg);
+            background: #ffffff;
+            border: 1px solid #e2e8f0;
+            border-radius: 8px;
             padding: 2rem;
             margin-bottom: 2rem;
-            backdrop-filter: var(--blur-sm);
-            -webkit-backdrop-filter: var(--blur-sm);
-            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-            position: relative;
-            overflow: hidden;
-        }
-
-        .form-section::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            height: 1px;
-            background: linear-gradient(90deg, transparent 0%, var(--border-glass) 50%, transparent 100%);
-        }
-
-        .form-section:hover {
-            box-shadow: var(--shadow-glass);
-            border-color: var(--primary-light);
-            transform: translateY(-2px);
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
         }
 
         label {
@@ -221,24 +149,20 @@
         select {
             width: 100%;
             padding: 1rem 1.25rem;
-            border: 2px solid var(--border-glass);
-            border-radius: var(--radius-md);
+            border: 2px solid #e2e8f0;
+            border-radius: 6px;
             font-size: 1rem;
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-            background: rgba(255, 255, 255, 0.8);
+            background: #ffffff;
             color: var(--text-primary);
-            backdrop-filter: var(--blur-sm);
-            -webkit-backdrop-filter: var(--blur-sm);
         }
 
         input:focus,
         textarea:focus,
         select:focus {
             border-color: var(--primary-color);
-            box-shadow: 0 0 0 4px var(--primary-light);
+            box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.1);
             outline: none;
-            background: rgba(255, 255, 255, 0.95);
-            transform: translateY(-1px);
         }
 
         textarea {
@@ -308,39 +232,37 @@
         }
 
         .btn-primary {
-            background: var(--primary-gradient);
+            background: var(--primary-color);
             color: white;
-            box-shadow: 0 4px 15px rgba(102, 126, 234, 0.4);
+            box-shadow: 0 2px 8px rgba(37, 99, 235, 0.3);
         }
 
         .btn-primary:hover {
-            background: var(--primary-gradient-hover);
-            box-shadow: 0 8px 25px rgba(102, 126, 234, 0.6);
+            background: var(--primary-hover);
+            box-shadow: 0 4px 12px rgba(37, 99, 235, 0.4);
         }
 
         .btn-secondary {
-            background: var(--bg-glass);
+            background: #f8fafc;
             color: var(--text-secondary);
-            border: 1px solid var(--border-glass);
-            backdrop-filter: var(--blur-sm);
-            -webkit-backdrop-filter: var(--blur-sm);
+            border: 1px solid #e2e8f0;
         }
 
         .btn-secondary:hover {
-            background: var(--bg-glass-hover);
-            border-color: var(--primary-light);
+            background: #f1f5f9;
+            border-color: var(--primary-color);
             color: var(--text-primary);
         }
 
         .btn-danger {
-            background: var(--danger-gradient);
+            background: var(--danger-color);
             color: white;
-            box-shadow: 0 4px 15px rgba(239, 68, 68, 0.4);
+            box-shadow: 0 2px 8px rgba(239, 68, 68, 0.3);
         }
 
         .btn-danger:hover {
-            background: linear-gradient(135deg, #dc2626 0%, #b91c1c 100%);
-            box-shadow: 0 8px 25px rgba(239, 68, 68, 0.6);
+            background: #dc2626;
+            box-shadow: 0 4px 12px rgba(239, 68, 68, 0.4);
         }
 
         .btn-sm {
@@ -362,30 +284,25 @@
             width: 100%;
             border-collapse: collapse;
             margin-top: 1.5rem;
-            background: var(--bg-glass);
-            border-radius: var(--radius-lg);
+            background: #ffffff;
+            border-radius: 8px;
             overflow: hidden;
-            backdrop-filter: var(--blur-sm);
-            -webkit-backdrop-filter: var(--blur-sm);
-            box-shadow: var(--shadow-md);
-            border: 1px solid var(--border-glass);
+            border: 1px solid #e2e8f0;
         }
 
         th, td {
             text-align: left;
             padding: 1.25rem 1.5rem;
-            border-bottom: 1px solid var(--border-glass);
+            border-bottom: 1px solid #e2e8f0;
         }
 
         th {
-            background: var(--bg-glass-hover);
+            background: #f8fafc;
             font-weight: 700;
             color: var(--text-primary);
             font-size: 0.95rem;
             text-transform: uppercase;
             letter-spacing: 0.1em;
-            backdrop-filter: var(--blur-sm);
-            -webkit-backdrop-filter: var(--blur-sm);
         }
 
         tr:last-child td {
@@ -393,9 +310,7 @@
         }
 
         tr:hover {
-            background: var(--bg-glass-hover);
-            backdrop-filter: var(--blur-sm);
-            -webkit-backdrop-filter: var(--blur-sm);
+            background: #f8fafc;
         }
 
         td .actions {
@@ -422,14 +337,12 @@
 
         .config-value-display, .config-comment-display {
             padding: 1rem;
-            background: rgba(255, 255, 255, 0.6);
-            border-radius: var(--radius-sm);
+            background: #f8fafc;
+            border-radius: 4px;
             white-space: pre-wrap;
             word-break: break-all;
             font-size: 0.95em;
-            backdrop-filter: var(--blur-sm);
-            -webkit-backdrop-filter: var(--blur-sm);
-            border: 1px solid var(--border-glass);
+            border: 1px solid #e2e8f0;
         }
 
         .config-comment-display {
@@ -465,7 +378,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: var(--text-muted);
+            background: #cbd5e1;
             transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
             border-radius: 32px;
             box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -485,8 +398,8 @@
         }
 
         input:checked + .slider {
-            background: var(--success-gradient);
-            box-shadow: 0 0 20px rgba(16, 185, 129, 0.3);
+            background: var(--success-color);
+            box-shadow: 0 0 10px rgba(16, 185, 129, 0.3);
         }
 
         input:checked + .slider:before {
@@ -548,19 +461,19 @@
         }
 
         .message-box.success {
-            background: rgba(16, 185, 129, 0.15);
+            background: #f0fdf4;
             color: #065f46;
             border-left-color: var(--success-color);
         }
 
         .message-box.error {
-            background: rgba(239, 68, 68, 0.15);
+            background: #fef2f2;
             color: #991b1b;
             border-left-color: var(--danger-color);
         }
 
         .message-box.info {
-            background: rgba(6, 182, 212, 0.15);
+            background: #ecfeff;
             color: #155e75;
             border-left-color: var(--info-color);
         }
@@ -678,37 +591,23 @@
             align-items: center;
             gap: 1.25rem;
             padding: 1.25rem;
-            background: var(--bg-glass);
-            border: 1px solid var(--border-glass);
-            border-radius: var(--radius-md);
+            background: #ffffff;
+            border: 1px solid #e2e8f0;
+            border-radius: 6px;
             margin-bottom: 1rem;
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-            backdrop-filter: var(--blur-sm);
-            -webkit-backdrop-filter: var(--blur-sm);
-            position: relative;
-            overflow: hidden;
         }
 
-        .rule-item::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            height: 1px;
-            background: linear-gradient(90deg, transparent 0%, var(--border-glass) 50%, transparent 100%);
-        }
 
         .rule-item:hover {
-            box-shadow: var(--shadow-md);
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
             border-color: var(--primary-color);
             transform: translateY(-2px);
-            background: var(--bg-glass-hover);
         }
 
         .rule-item.disabled {
             opacity: 0.6;
-            background: rgba(148, 163, 184, 0.1);
+            background: #f8fafc;
         }
 
         .rule-toggle {
@@ -786,10 +685,8 @@
             flex: 1;
             min-width: 150px;
             padding: 0.5rem 0.75rem;
-            background: rgba(255, 255, 255, 0.6);
-            border-radius: var(--radius-sm);
-            backdrop-filter: var(--blur-sm);
-            -webkit-backdrop-filter: var(--blur-sm);
+            background: #f8fafc;
+            border-radius: 4px;
         }
 
         .rule-arrow {
